--- a/fantasycourt.nl/themes/fantasy-court/assets/css/_scaffolding.scss
+++ b/fantasycourt.nl/themes/fantasy-court/assets/css/_scaffolding.scss
@@ -13,6 +13,7 @@
   background-repeat: no-repeat;
 
   height: 150px;
+  width: 100vw;
 
   @media screen and (min-width: $containerWidth) {
     height: 350px;
